src/App.css
:root {

  --tech-icon-size: 60px;
  --nav-link-spacing: 31px;
  --border-shadow-height: 40px;

  --general-opacity: 0.8;

  --landing-text: rgb(64, 40, 36);
  --landing-card: rgba(239, 132, 50, 0.8); 
  --landing-card-solid: rgba(239, 132, 50); 
  --landing-card-shadow: rgba(64, 40, 36);
 

  --about-text: rgb(205, 223, 229);
  --about-card: rgba(4, 25, 15, 0.8); 
  --about-card-solid: rgba(4, 25, 15); 
  --about-card-shadow: rgba(205, 223, 229);
  
  --technologies-text: rgb(6, 79, 80);
  --technologies-card: rgba(119, 163, 162, 0.8); 
  --technologies-card-solid: rgba(119, 163, 162); 
  --technologies-card-shadow: rgba(36, 80, 79);

  /* --projects-text: rgb(253, 163, 151); */
  --projects-text: rgb(46, 30, 32);
  /* --projects-text: rgb(94, 79, 77); */
  /* --projects-text: rgb(206, 124, 106); */
  --projects-card: rgba(228, 222, 218, 0.8); 
  --projects-card-solid: rgba(228, 222, 218); 
  --projects-card-shadow: rgba(253, 163, 151);

  --contacts-text: rgb(57, 177, 243);
  --contacts-card: rgba(2, 22, 81, 0.8); 
  --contacts-card-solid: rgba(2, 22, 81); 
  --contacts-card-shadow: rgb(76, 60, 193);

  --technologies-icon-size: 50px;
}


/******************************
****GLOBAL-ISH SETTINGS********
******************************/

.main {
  display: flex;
  flex-direction: column;
  background-color: black;
  /* align-items: center; */
  /* width: 100%; */
}

.section {
  min-height: 100vh;
  display: flex;
  flex-flow: column;
  padding: 80px 3vw;
  justify-content: center;
  align-items: center;
  /* max-width: 600px; */
}

.section-contents {
  width: 94vw;
  max-width: 600px;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  /* border: 1px solid greenyellow; */
}

.card {
  border-radius: 5px;
  background: var(--bgcolor);
  box-shadow: 3px 5px 10px 2px var(--shadow);
  /* opacity: var(--general-opacity); */
}

.blur-border {
  height: 0;
  overflow: visible;
}

.blur-border > * {
  background: purple;
  position: relative;
  height: 80px;
  top: -40px;
  width: 100%;
  z-index: 4;
  /*** Thanks for the gradients go to colorzilla.com ***/
  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 24%, rgba(0,0,0,0.9) 34%, rgba(0,0,0,1) 45%, rgba(0,0,0,1) 55%, rgba(0,0,0,0.9) 66%, rgba(0,0,0,0.6) 76%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 24%,rgba(0,0,0,0.9) 34%,rgba(0,0,0,1) 45%,rgba(0,0,0,1) 55%,rgba(0,0,0,0.9) 66%,rgba(0,0,0,0.6) 76%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 24%,rgba(0,0,0,0.9) 34%,rgba(0,0,0,1) 45%,rgba(0,0,0,1) 55%,rgba(0,0,0,0.9) 66%,rgba(0,0,0,0.6) 76%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
}

.section-title {
  display: flex;
  padding: 10px 0;
  width: 100%;
  max-width: 1000px;
  margin: 0 10px 60px;
  background: var(--bgcolor);
  align-items: center;
  justify-content: center;
  text-align: center;
}

a {
  color: inherit;
}

a:visited {
  color: inherit;
}

a:focus {
  color: white;
  border: 1px solid red;
}

.disable-selection
, .section-title
, .nav-menu-container {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}


/******************************
****HEADERS********************
******************************/

h1 {
  font-size: 50px;
}

h2 {
  font-size: 40px;
}

h3 {
  font-size: 30px;
}

h4 {
  font-size: 25px;
}

h5 {
  font-size: 25px;
}

h6 {
  font-size: 23px;
}

/******************************
****SECTION THEMES*************
******************************/

  /****LANDING****/
.landing-theme {
  color: var(--landing-text);
  --bgcolor: var(--landing-card);
  --bgcolor-solid: var(--landing-card-solid);
  --shadow: var(--landing-card-shadow);
}

  /****ABOUT****/
.about-theme {
  color: var(--about-text);
  --bgcolor: var(--about-card);
  --bgcolor-solid: var(--about-card-solid);
  --shadow: var(--about-card-shadow);
}

  /****TECHNOLOGIES****/
.technologies-theme {
  color: var(--technologies-text);
  fill: var(--technologies-text);
  --bgcolor: var(--technologies-card);
  --bgcolor-solid: var(--technologies-card-solid);
  --shadow: var(--technologies-card-shadow);
}

  /****PROJECTS****/
.projects-theme {
  color: var(--projects-text);
  --bgcolor: var(--projects-card);
  --bgcolor-solid: var(--projects-card-solid);
  --shadow: var(--projects-card-shadow);
}

  /****CONTACTS****/
.contacts-theme {
  color: var(--contacts-text);
  --bgcolor: var(--contacts-card); 
  --bgcolor-solid: var(--contacts-card-solid); 
  --shadow: var(--contacts-card-shadow);
}

/******************************
****NAV MENU*******************
******************************/
:root {
  --hamburger-size: 50px;
  --nav-link-border-size: 5px;
}

.nav-menu-container {
  z-index: 11;
  position: fixed;
  bottom: 10px;
  right: 10px;
  height: var(--hamburger-size);
  width: var(--hamburger-size);
  overflow: visible;
  display: flex;
  justify-content: center;
  align-items: center;
}

.nav-menu-icon {
  font-size: var(--hamburger-size);
  color: white;
  padding: 3px;
  
  /* font-style: bold; */
  background: rgba(0,0,0,0.6);
  box-shadow: 0 0 5px rgba(0,0,0,0.6);
  border-radius: 5px;
  /* mix-blend-mode: difference; */
}

.nav-menu-links {
  /* visibility: hidden; */
  position: absolute;
  right: 0;
  bottom: calc(var(--hamburger-size) + 10px);
}

.nav-menu-link {
  position: relative;
  display: flex;
  position: relative;
  margin-bottom: 4px;
  left: 200px;
  opacity: 0;
}

.nav-menu-link-main {
  border-top: var(--nav-link-border-size) solid var(--shadow);
  border-bottom: var(--nav-link-border-size) solid var(--shadow);
  background-color: var(--bgcolor-solid);
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 8px;
  padding-right: 13px;
  padding-left: 10px;
  font-size: 1.5em;
}

.nav-slide-in {
  /* left: 0; */
  animation-duration: 1s;
  animation-name: navslidein;
  animation-fill-mode: forwards;
  /* animation-direction: alternate; */
}

.nav-slide-out {
  animation-duration: 1s;
  animation-name: navslideout;
  animation-fill-mode: forwards;
}

@keyframes navslidein {
  from {
    left: 200px;
    opacity: 0;
  }

  100% {
    left: 0;
    opacity: 1;
  }
}

@keyframes navslideout {
  100% {
    left: 200px;
    opacity: 0;
    /* visibility: hidden; */
  }

  0% {
    left: 0;
    opacity: 1;
    /* visibility: visible; */
  }
}

.nav-slide-in:nth-child(1) {
  animation-delay: 0.4s;
}

.nav-slide-in:nth-child(2) {
  animation-delay: 0.3s;
}

.nav-slide-in:nth-child(3) {
  animation-delay: 0.2s;
}

.nav-slide-in:nth-child(4) {
  animation-delay: 0.1s;
}

.nav-slide-in:nth-child(5) {
  animation-delay: 0s;
}

.nav-slide-out:nth-child(1) {
  animation-delay: 0.06s;
}

.nav-slide-out:nth-child(2) {
  animation-delay: 0.045s;
}

.nav-slide-out:nth-child(3) {
  animation-delay: 0.03s;
}

.nav-slide-out:nth-child(4) {
  animation-delay: 0.015s;
}

.nav-slide-out:nth-child(5) {
  animation-delay: 0s;
}

.nav-menu-link-fade {
  display: flex;
  position: absolute;
  width: 30px;
  left: -30px;
  height: 100%;
  opacity: 1;
  flex-flow: column;
}

.nav-menu-link-fade div:nth-child(odd) {
  height: var(--nav-link-border-size);
  width: 100%;
  background-image : linear-gradient(to right, 
                    rgba(255,255,255, 0), 
                    var(--shadow) 90%);
}

.nav-menu-link-fade div:nth-child(even) {
  flex: 1;
  width: 100%;
  background-image : linear-gradient(to right, 
                    rgba(255,255,255, 0), 
                    var(--bgcolor-solid) 90%);
}


  /****LANDING****/
.landing {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-flow: row;
}

.landing-title {
  background: var(--bgcolor);
  box-shadow: 3px 5px 10px 2px var(--shadow);
  display: flex;
  flex-flow: column;
  align-items: flex-end;
  padding: 15px;
}

.landing::after {
  content: '';
  width: 55%;
  min-width: 20px;
}

  /****ABOUT****/
.about-contents {
  padding: 10px;
}

.about-contents > h5 {
  text-align: center;
}

.about-contents > * {
  margin-bottom: 15px;
}


  /****TECHNOLOGIES****/
.technologies-note-popup {
  position: fixed;
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-flow: column;
  background: rgba(0, 0, 0, 0.7);
  justify-content: center;
  align-items: center;
  z-index: 4;
}

.technologies-note-popup-card {
  width: 95vw;
  display: flex;
  flex-flow: column;
  padding: 20px;
}

.technologies-groups {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: -50px -200px 0;
  width: 840px;
  max-width: 94vw;
}

.technologies-group {
  width: 220px;
  padding: 20px;
  display: flex;
  flex-flow: column;
  margin: 50px 30px 0;
}

.technologies-row {
  display: flex;
  justify-content: space-around;
  width: 100%;
  height: var(--technologies-icon-size);
  margin-bottom: 20px;
}

.technologies-row div {
  display: flex;
  justify-content: center;
  align-items: center;
}

.technologies-row > *, .technologies-row img {
  max-width: var(--technologies-icon-size);
  max-height: var(--technologies-icon-size);
}

.technologies-group h5 {
  padding-top: 10px;
}

.technologies-comment {
  margin-top: 60px;
  padding: 20px 40px;
  max-width: 100%;
  transition: all 1s ease-in-out;
  white-space: pre-line; /* I find the necessity of this line to be particularly stupid*/
}


  /****CONTACTS****/

.contacts-main-card {
  display: flex;
  flex-wrap: wrap;
  background: var(--bgcolor);
  /* max-width: 94; */
}

.contacts-column {
  /* border: 1px solid red; */
  display: flex;
  flex-flow: column;
  align-items: center;
  padding: 20px;
  flex-grow: 1;
}

.contacts-column h6 {
  padding-bottom: 8px;
}

